--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>QWQSoftware</title>
 </head>
 <body>
-    <h1>哇，你来到了QWQSoft的首页，欢迎！</h1>
-    <h3>这里有总计0款游戏，好玩！</h3>
-    <h5>还有总计0款软件，功能强大，品种丰富！</h5>
+    <h1>哇，你来到了QWQSoft的首页！</h1>
+    <h3>这里有品种丰富的总计0款游戏，好玩！</h3>
+    <h5>还有功能强大的总计0款软件！</h5>
     TODO:&nbsp;用vue重写这个页面
 </body>
