--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>哇，你来到了QWQSoft的首页！</h1>
     <h3>这里有品种丰富的总计0款游戏，好玩！</h3>
     <h5>还有功能强大的总计0款软件！</h5>
-    TODO:&nbsp;用vue重写这个页面
+    TODO:&nbsp;用vue重写这个页面<br>
+    TODO:&nbsp;内部细胞分化一个UI设计师
 </body>
